fix: improve readability of inactive tabs in Wezterm light themes
Previously, inactive tabs in Wezterm light themes used a foreground color
derived from the background palette, which resulted in low contrast and
poor readability. This change adjusts the foreground color of inactive
tabs to use the foreground palette when in light mode, significantly
improving their legibility.

Refs #24

--- a/extras/wezterm/themes/light/1/oasis_canyon_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_canyon_light_1.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e8e0d8'
-fg_color = '#f9f7f5'
+fg_color = '#665137'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f3efeb'
-fg_color = '#f9f7f5'
+fg_color = '#665137'
 intensity = 'Normal'
 italic = false
 strikethrough = false
