--- a/extras/wezterm/themes/light/1/oasis_lagoon_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_lagoon_light_1.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#dde3e9'
-fg_color = '#f9fafb'
+fg_color = '#40577a'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f0f2f5'
-fg_color = '#f9fafb'
+fg_color = '#40577a'
 intensity = 'Normal'
 italic = false
 strikethrough = false
