--- a/extras/wezterm/themes/light/1/oasis_mirage_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_mirage_light_1.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#dde9e3'
-fg_color = '#f9fbfa'
+fg_color = '#455b5b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f0f5f2'
-fg_color = '#f9fbfa'
+fg_color = '#455b5b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
