--- a/extras/wezterm/themes/light/1/oasis_twilight_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_twilight_light_1.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#dddde9'
-fg_color = '#f9f9fb'
+fg_color = '#5b4f7e'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f0f0f5'
-fg_color = '#f9f9fb'
+fg_color = '#5b4f7e'
 intensity = 'Normal'
 italic = false
 strikethrough = false
