--- a/extras/wezterm/themes/light/2/oasis_midnight_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_midnight_light_2.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eed5c3'
-fg_color = '#f8eee7'
+fg_color = '#584f48'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f5e6db'
-fg_color = '#f8eee7'
+fg_color = '#584f48'
 intensity = 'Normal'
 italic = false
 strikethrough = false
