--- a/extras/wezterm/themes/light/2/oasis_mirage_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_mirage_light_2.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#c8eeee'
-fg_color = '#ebf9f9'
+fg_color = '#425858'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#dff5f5'
-fg_color = '#ebf9f9'
+fg_color = '#425858'
 intensity = 'Normal'
 italic = false
 strikethrough = false
