--- a/extras/wezterm/themes/light/2/oasis_night_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_night_light_2.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#decd96'
-fg_color = '#e9deb9'
+fg_color = '#54432d'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#e5d8ae'
-fg_color = '#e9deb9'
+fg_color = '#54432d'
 intensity = 'Normal'
 italic = false
 strikethrough = false
