--- a/extras/wezterm/themes/light/2/oasis_rose_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_rose_light_2.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eec9e3'
-fg_color = '#f9ecf5'
+fg_color = '#61495c'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f5e0ef'
-fg_color = '#f9ecf5'
+fg_color = '#61495c'
 intensity = 'Normal'
 italic = false
 strikethrough = false
