--- a/extras/wezterm/themes/light/2/oasis_starlight_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_starlight_light_2.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eee3c9'
-fg_color = '#f9f5ec'
+fg_color = '#5b5341'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f5efe0'
-fg_color = '#f9f5ec'
+fg_color = '#5b5341'
 intensity = 'Normal'
 italic = false
 strikethrough = false
