--- a/extras/wezterm/themes/light/2/oasis_twilight_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_twilight_light_2.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#d2c9ee'
-fg_color = '#efecf9'
+fg_color = '#544975'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#e5e0f5'
-fg_color = '#efecf9'
+fg_color = '#544975'
 intensity = 'Normal'
 italic = false
 strikethrough = false
