--- a/extras/wezterm/themes/light/3/oasis_cactus_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_cactus_light_3.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#c1e1cf'
-fg_color = '#e0f0e7'
+fg_color = '#405348'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#d6ebdf'
-fg_color = '#e0f0e7'
+fg_color = '#405348'
 intensity = 'Normal'
 italic = false
 strikethrough = false
