--- a/extras/wezterm/themes/light/3/oasis_desert_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_desert_light_3.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#f0d1ad'
-fg_color = '#f7e7d4'
+fg_color = '#5a4a38'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f5e0c7'
-fg_color = '#f7e7d4'
+fg_color = '#5a4a38'
 intensity = 'Normal'
 italic = false
 strikethrough = false
