--- a/extras/wezterm/themes/light/3/oasis_midnight_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_midnight_light_3.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#f0c8ad'
-fg_color = '#f7e2d4'
+fg_color = '#524943'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f5d9c7'
-fg_color = '#f7e2d4'
+fg_color = '#524943'
 intensity = 'Normal'
 italic = false
 strikethrough = false
