--- a/extras/wezterm/themes/light/3/oasis_night_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_night_light_3.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#dbca8f'
-fg_color = '#e6dbb2'
+fg_color = '#52412d'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#e2d5a6'
-fg_color = '#e6dbb2'
+fg_color = '#52412d'
 intensity = 'Normal'
 italic = false
 strikethrough = false
