--- a/extras/wezterm/themes/light/4/oasis_abyss_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_abyss_light_4.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eec5a0'
-fg_color = '#f5ddc7'
+fg_color = '#4e473f'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f3d5ba'
-fg_color = '#f5ddc7'
+fg_color = '#4e473f'
 intensity = 'Normal'
 italic = false
 strikethrough = false
