--- a/extras/wezterm/themes/light/4/oasis_cactus_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_cactus_light_4.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#b4e4c8'
-fg_color = '#d6f0e1'
+fg_color = '#405147'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#cbecd9'
-fg_color = '#d6f0e1'
+fg_color = '#405147'
 intensity = 'Normal'
 italic = false
 strikethrough = false
