--- a/extras/wezterm/themes/light/4/oasis_canyon_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_canyon_light_4.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eec9a0'
-fg_color = '#f5dfc7'
+fg_color = '#574630'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f3d8ba'
-fg_color = '#f5dfc7'
+fg_color = '#574630'
 intensity = 'Normal'
 italic = false
 strikethrough = false
