--- a/extras/wezterm/themes/light/4/oasis_dune_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_dune_light_4.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e5d8ae'
-fg_color = '#f0e9d1'
+fg_color = '#4f4d44'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#ece3c5'
-fg_color = '#f0e9d1'
+fg_color = '#4f4d44'
 intensity = 'Normal'
 italic = false
 strikethrough = false
