--- a/extras/wezterm/themes/light/4/oasis_lagoon_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_lagoon_light_4.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#a1c2f1'
-fg_color = '#c9dcf7'
+fg_color = '#334561'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#bcd3f5'
-fg_color = '#c9dcf7'
+fg_color = '#334561'
 intensity = 'Normal'
 italic = false
 strikethrough = false
