--- a/extras/wezterm/themes/light/4/oasis_midnight_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_midnight_light_4.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eebda0'
-fg_color = '#f5d8c7'
+fg_color = '#4d443e'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f3cfba'
-fg_color = '#f5d8c7'
+fg_color = '#4d443e'
 intensity = 'Normal'
 italic = false
 strikethrough = false
