--- a/extras/wezterm/themes/light/4/oasis_night_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_night_light_4.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#d8c688'
-fg_color = '#e3d7aa'
+fg_color = '#4f3f2b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#e0d19f'
-fg_color = '#e3d7aa'
+fg_color = '#4f3f2b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
