--- a/extras/wezterm/themes/light/4/oasis_rose_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_rose_light_4.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eaa9da'
-fg_color = '#f3ceea'
+fg_color = '#513d4b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f0c2e5'
-fg_color = '#f3ceea'
+fg_color = '#513d4b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
