--- a/extras/wezterm/themes/light/4/oasis_starlight_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_starlight_light_4.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e5d3ae'
-fg_color = '#f0e6d1'
+fg_color = '#524b3b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#ece0c5'
-fg_color = '#f0e6d1'
+fg_color = '#524b3b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
