--- a/extras/wezterm/themes/light/5/oasis_abyss_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_abyss_light_5.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#ecb893'
-fg_color = '#f3d2ba'
+fg_color = '#48413b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f1c9ad'
-fg_color = '#f3d2ba'
+fg_color = '#48413b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
