--- a/extras/wezterm/themes/light/5/oasis_midnight_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_midnight_light_5.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#ecb193'
-fg_color = '#f3cdba'
+fg_color = '#473f3a'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f1c4ad'
-fg_color = '#f3cdba'
+fg_color = '#473f3a'
 intensity = 'Normal'
 italic = false
 strikethrough = false
