--- a/extras/wezterm/themes/light/5/oasis_twilight_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_twilight_light_5.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#aa9de7'
-fg_color = '#cac2f0'
+fg_color = '#3b3351'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#bfb6ed'
-fg_color = '#cac2f0'
+fg_color = '#3b3351'
 intensity = 'Normal'
 italic = false
 strikethrough = false
