--- a/extras/wezterm/themes/light/1/oasis_midnight_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_midnight_light_1.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e8dcd8'
-fg_color = '#f9f6f5'
+fg_color = '#5c534c'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f3edeb'
-fg_color = '#f9f6f5'
+fg_color = '#5c534c'
 intensity = 'Normal'
 italic = false
 strikethrough = false
