--- a/extras/wezterm/themes/light/1/oasis_night_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_night_light_1.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#cfc7af'
-fg_color = '#e0dbcc'
+fg_color = '#52422d'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#dbd5c2'
-fg_color = '#e0dbcc'
+fg_color = '#52422d'
 intensity = 'Normal'
 italic = false
 strikethrough = false
