--- a/extras/wezterm/themes/light/1/oasis_rose_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_rose_light_1.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e9dde9'
-fg_color = '#fbf9fb'
+fg_color = '#694e63'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f5f0f5'
-fg_color = '#fbf9fb'
+fg_color = '#694e63'
 intensity = 'Normal'
 italic = false
 strikethrough = false
