--- a/extras/wezterm/themes/light/1/oasis_sol_light_1.toml
+++ b/extras/wezterm/themes/light/1/oasis_sol_light_1.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e8d8d8'
-fg_color = '#f9f5f5'
+fg_color = '#814236'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f3ebeb'
-fg_color = '#f9f5f5'
+fg_color = '#814236'
 intensity = 'Normal'
 italic = false
 strikethrough = false
