--- a/extras/wezterm/themes/light/2/oasis_cactus_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_cactus_light_2.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#cfe8da'
-fg_color = '#eef7f2'
+fg_color = '#44584c'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#e4f2ea'
-fg_color = '#eef7f2'
+fg_color = '#44584c'
 intensity = 'Normal'
 italic = false
 strikethrough = false
