--- a/extras/wezterm/themes/light/2/oasis_canyon_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_canyon_light_2.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eedac3'
-fg_color = '#f8f0e7'
+fg_color = '#624e35'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f5e9db'
-fg_color = '#f8f0e7'
+fg_color = '#624e35'
 intensity = 'Normal'
 italic = false
 strikethrough = false
