--- a/extras/wezterm/themes/light/2/oasis_dune_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_dune_light_2.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eee5c9'
-fg_color = '#f9f6ec'
+fg_color = '#57544b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f5f0e0'
-fg_color = '#f9f6ec'
+fg_color = '#57544b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
