--- a/extras/wezterm/themes/light/2/oasis_lagoon_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_lagoon_light_2.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#c8d8ee'
-fg_color = '#ebf1f9'
+fg_color = '#3d5273'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#dfe9f5'
-fg_color = '#ebf1f9'
+fg_color = '#3d5273'
 intensity = 'Normal'
 italic = false
 strikethrough = false
