--- a/extras/wezterm/themes/light/2/oasis_sol_light_2.toml
+++ b/extras/wezterm/themes/light/2/oasis_sol_light_2.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eecbc3'
-fg_color = '#f8eae7'
+fg_color = '#793e33'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f5e0db'
-fg_color = '#f8eae7'
+fg_color = '#793e33'
 intensity = 'Normal'
 italic = false
 strikethrough = false
