--- a/extras/wezterm/themes/light/3/oasis_dune_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_dune_light_3.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e9dfba'
-fg_color = '#f4efdd'
+fg_color = '#525047'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f0ead1'
-fg_color = '#f4efdd'
+fg_color = '#525047'
 intensity = 'Normal'
 italic = false
 strikethrough = false
