--- a/extras/wezterm/themes/light/3/oasis_lagoon_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_lagoon_light_3.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#b3cbef'
-fg_color = '#d9e5f7'
+fg_color = '#384b68'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#ccdcf4'
-fg_color = '#d9e5f7'
+fg_color = '#384b68'
 intensity = 'Normal'
 italic = false
 strikethrough = false
