--- a/extras/wezterm/themes/light/3/oasis_mirage_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_mirage_light_3.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#b7ebeb'
-fg_color = '#dbf5f5'
+fg_color = '#405454'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#cff2f2'
-fg_color = '#dbf5f5'
+fg_color = '#405454'
 intensity = 'Normal'
 italic = false
 strikethrough = false
