--- a/extras/wezterm/themes/light/3/oasis_rose_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_rose_light_3.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e9badd'
-fg_color = '#f4ddee'
+fg_color = '#594353'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f0d1e8'
-fg_color = '#f4ddee'
+fg_color = '#594353'
 intensity = 'Normal'
 italic = false
 strikethrough = false
