--- a/extras/wezterm/themes/light/3/oasis_sol_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_sol_light_3.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#f0b7ad'
-fg_color = '#f7d9d4'
+fg_color = '#6d382e'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f5cec7'
-fg_color = '#f7d9d4'
+fg_color = '#6d382e'
 intensity = 'Normal'
 italic = false
 strikethrough = false
