--- a/extras/wezterm/themes/light/3/oasis_starlight_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_starlight_light_3.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e9dbba'
-fg_color = '#f4eddd'
+fg_color = '#564f3e'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f0e7d1'
-fg_color = '#f4eddd'
+fg_color = '#564f3e'
 intensity = 'Normal'
 italic = false
 strikethrough = false
