--- a/extras/wezterm/themes/light/3/oasis_twilight_light_3.toml
+++ b/extras/wezterm/themes/light/3/oasis_twilight_light_3.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#c4bae9'
-fg_color = '#e2ddf4'
+fg_color = '#4a4268'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#d8d1f0'
-fg_color = '#e2ddf4'
+fg_color = '#4a4268'
 intensity = 'Normal'
 italic = false
 strikethrough = false
