--- a/extras/wezterm/themes/light/4/oasis_mirage_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_mirage_light_4.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#a7ecec'
-fg_color = '#cdf4f4'
+fg_color = '#3e5252'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#c0f1f1'
-fg_color = '#cdf4f4'
+fg_color = '#3e5252'
 intensity = 'Normal'
 italic = false
 strikethrough = false
