--- a/extras/wezterm/themes/light/4/oasis_twilight_light_4.toml
+++ b/extras/wezterm/themes/light/4/oasis_twilight_light_4.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#b9a9ea'
-fg_color = '#d7cef3'
+fg_color = '#433a5c'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#cdc2f0'
-fg_color = '#d7cef3'
+fg_color = '#433a5c'
 intensity = 'Normal'
 italic = false
 strikethrough = false
