--- a/extras/wezterm/themes/light/5/oasis_cactus_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_cactus_light_5.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#aadebe'
-fg_color = '#cbebd7'
+fg_color = '#3c4d44'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#c0e7cf'
-fg_color = '#cbebd7'
+fg_color = '#3c4d44'
 intensity = 'Normal'
 italic = false
 strikethrough = false
