--- a/extras/wezterm/themes/light/5/oasis_desert_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_desert_light_5.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#ecbd93'
-fg_color = '#f3d5ba'
+fg_color = '#504132'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f1cdad'
-fg_color = '#f3d5ba'
+fg_color = '#504132'
 intensity = 'Normal'
 italic = false
 strikethrough = false
