--- a/extras/wezterm/themes/light/5/oasis_dune_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_dune_light_5.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e1cfa4'
-fg_color = '#ece1c6'
+fg_color = '#4a4940'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#e8dbbb'
-fg_color = '#ece1c6'
+fg_color = '#4a4940'
 intensity = 'Normal'
 italic = false
 strikethrough = false
