--- a/extras/wezterm/themes/light/5/oasis_lagoon_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_lagoon_light_5.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#94beef'
-fg_color = '#bcd6f5'
+fg_color = '#30405b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#afcef3'
-fg_color = '#bcd6f5'
+fg_color = '#30405b'
 intensity = 'Normal'
 italic = false
 strikethrough = false
