--- a/extras/wezterm/themes/light/5/oasis_mirage_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_mirage_light_5.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#9aeae4'
-fg_color = '#c0f2ee'
+fg_color = '#3c5050'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#b3efeb'
-fg_color = '#c0f2ee'
+fg_color = '#3c5050'
 intensity = 'Normal'
 italic = false
 strikethrough = false
