--- a/extras/wezterm/themes/light/5/oasis_night_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_night_light_5.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#d5bd81'
-fg_color = '#e0cfa3'
+fg_color = '#4b3b28'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#ddc998'
-fg_color = '#e0cfa3'
+fg_color = '#4b3b28'
 intensity = 'Normal'
 italic = false
 strikethrough = false
