--- a/extras/wezterm/themes/light/5/oasis_rose_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_rose_light_5.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#e79dd9'
-fg_color = '#f0c2e7'
+fg_color = '#4a3845'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#edb6e2'
-fg_color = '#f0c2e7'
+fg_color = '#4a3845'
 intensity = 'Normal'
 italic = false
 strikethrough = false
