--- a/extras/wezterm/themes/light/5/oasis_sol_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_sol_light_5.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#ec9b93'
-fg_color = '#f3bfba'
+fg_color = '#5b2e26'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f1b3ad'
-fg_color = '#f3bfba'
+fg_color = '#5b2e26'
 intensity = 'Normal'
 italic = false
 strikethrough = false
