--- a/extras/wezterm/themes/light/5/oasis_starlight_light_5.toml
+++ b/extras/wezterm/themes/light/5/oasis_starlight_light_5.toml
@@ -55,7 +55,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab]
 bg_color = '#eccb93'
-fg_color = '#f3deba'
+fg_color = '#4d4738'
 intensity = 'Normal'
 italic = false
 strikethrough = false
@@ -63,7 +63,7 @@ underline = 'None'
 
 [colors.tab_bar.inactive_tab_hover]
 bg_color = '#f1d8ad'
-fg_color = '#f3deba'
+fg_color = '#4d4738'
 intensity = 'Normal'
 italic = false
 strikethrough = false
